force-app/main/default/objects/User/fields/CaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>CaseSafeID__c</fullName>
    <description>Salesforce ID for the User record</description>
    <formula>CASESAFEID(Id)</formula>
    <inlineHelpText>Salesforce ID for the User record</inlineHelpText>
    <label>CaseSafeID</label>
    <type>Text</type>
</CustomField>