force-app/main/default/objects/User/fields/Development_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Development_Coordinator__c</fullName>
    <description>Identify the Development Coordinator assigned to the Fundraiser</description>
    <inlineHelpText>Identify the Development Coordinator assigned to the Fundraiser</inlineHelpText>
    <label>Development Coordinator</label>
    <relationshipName>DC</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>