force-app/main/default/objects/User/fields/iWave_PROscores__clientAPIKEY__c.field-meta.xml
<CustomField>
    <fullName>iWave_PROscores__clientAPIKEY__c</fullName>
    <description>stores the users api key for PROscore app</description>
    <label>iWave API Client Key</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>