force-app/main/default/objects/User/fields/iWave_PROscores__clientSecret__c.field-meta.xml
<CustomField>
    <fullName>iWave_PROscores__clientSecret__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>iWave API Client Secret</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>