force-app/main/default/objects/User/fields/ND_Bypass_Duplicate_Rules__c.field-meta.xml
<CustomField>
    <fullName>ND_Bypass_Duplicate_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in conjunction with a condition on the Duplicate Rules to allow API users to bypass the rules when loading data.</description>
    <label>Bypass Duplicate Rules</label>
    <type>Checkbox</type>
</CustomField>