force-app/main/default/objects/User/fields/ND_Constituent_ID__c.field-meta.xml
<CustomField>
    <fullName>ND_Constituent_ID__c</fullName>
    <description>Constituent ID for this User</description>
    <inlineHelpText>Constituent ID for this User</inlineHelpText>
    <label>Constituent ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>