force-app/main/default/objects/User/fields/nd_Gift_Planning_Officer__c.field-meta.xml
<CustomField>
    <fullName>nd_Gift_Planning_Officer__c</fullName>
    <description>Gift Planning Officer assigned to a Regional Director</description>
    <inlineHelpText>Gift Planning Officer assigned to a Regional Director</inlineHelpText>
    <label>Gift Planning Officer</label>
    <relationshipName>GPO</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>