force-app/main/default/objects/User/fields/ND_Group_Region__c.field-meta.xml
<CustomField>
    <fullName>ND_Group_Region__c</fullName>
    <description>Group/Region values to support the Fundraiser assignment process.</description>
    <inlineHelpText>Group/Region values to support the Fundraiser assignment process.</inlineHelpText>
    <label>Group/Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Group_Region</valueSetName>
    </valueSet>
</CustomField>