force-app/main/default/objects/User/fields/Prospect_Mgmt_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Mgmt_Consultant__c</fullName>
    <label>Prospect Mgmt. Consultant</label>
    <relationshipName>PMC</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>